manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-app-deployment
  labels:
    app: golang-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golang-app
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
      - name: golang-app
        image: cetyl/golang-app
        ports:
        - containerPort: 8080
