manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-app-service
   labels:
    app: golang-app
spec:
  type: NodePort
  ports:
  - port: 80          # Port exposed within the cluster
    targetPort: 8080  # Port on the pods
    nodePort: 30000   # Port accessible externally on each node
  selector:
    app: golang-app
